--- a/currency-exchange-service-8001/src/main/resources/application.properties
+++ b/currency-exchange-service-8001/src/main/resources/application.properties
@@ -11,3 +11,7 @@ spring.jpa.defer-datasource-initialization=true
 
 #eureka.client.serviceurl.defaultzon=http://localhost:8761/eureka
 eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
+
+eureka.instance.hostname=localhost
+
+
