--- a/currency-exchange-service/src/main/resources/application.properties
+++ b/currency-exchange-service/src/main/resources/application.properties
@@ -14,5 +14,6 @@ eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
 eureka.instance.hostname=localhost
 
 resilience4j.retry.instances.sample-api.maxRetryAttempts=5
-
+resilience4j.retry.instances.sample-api.waitDuration=1s
+resilience4j.retry.instances.sample-api.enableExponentialBackoff=true
 
