adding the zipkin dependency

--- a/currency-exchange-service/src/main/resources/application.properties
+++ b/currency-exchange-service/src/main/resources/application.properties
@@ -17,3 +17,4 @@ resilience4j.retry.instances.sample-api.maxRetryAttempts=5
 resilience4j.retry.instances.sample-api.waitDuration=1s
 resilience4j.retry.instances.sample-api.enableExponentialBackoff=true
 
+spring.sleuth.sampler.possiblity=1.0
