--- a/currency-exchange-service/pom.xml
+++ b/currency-exchange-service/pom.xml
@@ -97,7 +97,7 @@
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
-				<!-- <version>${project.parent.version}</version> -->
+				 <version>${project.parent.version}</version>
 				<configuration>
 					<image>
 						<name>rohitt15/mmv1-${project.artifactId}:${project.version}</name>
