--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,9 +1,38 @@
 version: '3.7'
 
-
 services:
+
   currency-exchange:
     image: rohitt15/mmv1-currency-exchange-service:0.0.1-SNAPSHOT
-    mem_limit: 500m
+    mem_limit: 700m
     ports:
       - "8000:8000"
+    networks:
+      - currency-network
+    depends_on:
+      - naming-server
+    environment:
+      EUREKA.CLIENT.SERVICEURL.DEFAULTZONE: http://naming-server:8761/eureka
+
+  currency-conversion:
+    image: rohitt15/mmv1-currency-conversion-service:0.0.1-SNAPSHOT
+    mem_limit: 700m
+    ports:
+      - "8100:8100"
+    networks:
+      - currency-network
+    depends_on:
+      - naming-server
+    environment:
+      EUREKA.CLIENT.SERVICEURL.DEFAULTZONE: http://naming-server:8761/eureka
+
+  naming-server:
+    image: rohitt15/mmv1-naming-server:0.0.1-SNAPSHOT
+    mem_limit: 700m
+    ports:
+      - "8761:8761"
+    networks:
+      - currency-network
+
+networks:
+  currency-network:
