--- a/currency-exchange-service/src/main/resources/application.properties
+++ b/currency-exchange-service/src/main/resources/application.properties
@@ -1,20 +1,27 @@
-#spring.application.name=currency-exchange
-spring.config.import=optional:configserver:http://localhost:8888
-
 spring.application.name=currency-exchange
 server.port=8000
+spring.config.import=optional:configserver:http://localhost:8888
 
-spring.jps.show-sql=true
+spring.jpa.show-sql=true
 spring.datasource.url=jdbc:h2:mem:testdb
 spring.h2.console.enabled=true
+
 spring.jpa.defer-datasource-initialization=true
 
-#eureka.client.serviceurl.defaultzone=http://localhost:8761/eureka
 eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
-eureka.instance.hostname=localhost
 
 resilience4j.retry.instances.sample-api.maxRetryAttempts=5
 resilience4j.retry.instances.sample-api.waitDuration=1s
 resilience4j.retry.instances.sample-api.enableExponentialBackoff=true
 
-spring.sleuth.sampler.possiblity=1.0
+#resilience4j.circuitbreaker.instances.default.failureRateThreshold=90
+resilience4j.ratelimiter.instances.default.limitForPeriod=2
+resilience4j.ratelimiter.instances.default.limitRefreshPeriod=10s
+
+resilience4j.bulkhead.instances.default.maxConcurrentCalls=10
+resilience4j.bulkhead.instances.sample-api.maxConcurrentCalls=10
+
+spring.sleuth.sampler.probability=1.0
+
+##spring.zipkin.baseUrl=http://localhost:9411/
+##spring.zipkin.sender.type=rabbit
